# rusify

./: Cargo.toml  LICENSE  README.md
rusify/: Cargo.toml
rusify-cli/: Cargo.toml
rusify-cli/src/: lib.rs  main.rs
rusify-cli/src/android/: aar.rs  android_target.rs  package.rs
rusify-cli/src/apple/: apple_target.rs  package.rs  swiftpackage.rs  xcframework.rs
rusify-cli/src/commands/: init.rs
rusify-cli/src/common/: metadata.rs  models.rs  path.rs  templating.rs
rusify-cli/src/console/: messages.rs  step.rs
rusify-cli/src/ffi/: kotlin.rs  swift.rs
rusify-cli/src/ohos/: ohos_arch.rs
rusify-cli/templates/: AndroidManifest.xml.txt  Cargo.toml.txt  Package.swift.txt  build.rs.txt  gradle-properties.txt
rusify-macro/: Cargo.toml
rusify-macro/src/: lib.rs
